# evoforge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: arxiv_abstract.md
docs/concepts/: architecture.md
examples/: README.md  code_agent.py  flight_agent.py  live_synthesis.py  multiparty_simulator.py
examples/datasets/: channel_md_sample.jsonl  skill_fix_sample.jsonl
src/evoforge/: __init__.py  cli.py  dashboard.py  dedup.py  intelligence_dashboard.py
src/evoforge/bootstrap/: pipeline.py  zero_shot.py
src/evoforge/context/: namespace.py
src/evoforge/core/: config.py  privacy.py  sdk.py  types.py
src/evoforge/coverage/: __init__.py  case_quality.py  criterion.py  expander.py  mapper.py  namespace.py  report.py  schema.py
src/evoforge/data/: namespace.py
src/evoforge/environment/: __init__.py  namespace.py  protocol.py
src/evoforge/eval/: multi_turn.py  namespace.py  runner.py  simulator.py
src/evoforge/evolution/: architecture_evolver.py  engine.py  namespace.py  promotion.py  prompt_evolver.py  regression_guard.py  workflow_evolver.py
src/evoforge/factory/: data_factory.py  dpo_generator.py
src/evoforge/forecast/: __init__.py  calibration.py  drift.py  features.py  forecaster.py  model.py  namespace.py  schema.py
src/evoforge/llm/: ollama.py  openai_compat.py  protocol.py  structured.py
src/evoforge/mining/: __init__.py  clusterer.py  llm_classifier.py  miner.py  namespace.py  report.py  schema.py
src/evoforge/synthesis/: __init__.py  conversation.py  generator.py  labeler.py  namespace.py  pipeline.py  quality.py  schema.py  seed.py  synthesizer.py
src/evoforge/trace/: __init__.py  namespace.py  normalizer.py  schema.py  signature.py  store.py
src/evoforge/training/: curator.py
src/foundry/: __init__.py  cli.py  dashboard.py  dedup.py  intelligence_dashboard.py  text.py
src/foundry/bootstrap/: pipeline.py
src/foundry/collection/: telemetry.py
src/foundry/context/: namespace.py
src/foundry/core/: agent_config.py  history.py  sdk.py  types.py
src/foundry/coverage/: __init__.py  case_quality.py  criterion.py  expander.py  mapper.py  namespace.py  report.py  schema.py
src/foundry/data/: namespace.py  registry.py
src/foundry/environment/: __init__.py  namespace.py  protocol.py
src/foundry/eval/: expander.py  multi_turn.py  namespace.py  scoring.py
src/foundry/evolution/: architecture_evolver.py  engine.py  namespace.py  promotion.py  prompt_evolver.py  regression_guard.py  (+2 more)
tests/e2e/: run_autonomous_real_agent.py  test_continuous_improvement.py  test_flywheel.py  test_improvement.py  test_local_ollama.py  test_pipeline.py  test_prompt_evolution_loop.py  test_single_agent_lifecycle.py
tests/integration/: test_agent_wrappers.py  test_coverage.py  test_eval_generation_quality.py  test_evolution_unified.py  test_failure_mining.py  test_forecast.py  test_intelligence_dashboard.py  test_p0_hardening.py  test_structured_parsing.py  test_synthesis.py  test_trace_intelligence.py
tests/unit/: test_scenario_synthesis.py  test_simulator_seam.py
(+48 files in other folders)
