[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evoforge"
version = "0.1.0"
description = "A data-centric SDK for self-evolving LLM agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "agents", "self-evolving", "data-centric", "fine-tuning", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",        # clustering for skill discovery + UQ
    "sentence-transformers>=2.2", # embeddings for diversity maximization
    "sqlitedict>=2.1",           # local metadata store
    "tenacity>=8.2",             # retry logic for LLM calls
    "rich>=13.0",                # evolution report CLI output
    "typer>=0.9",                # CLI interface
    "httpx>=0.25",               # async HTTP for LLM calls
    "pyyaml>=6.0",
    "jinja2>=3.1",               # prompt templating
]

[project.optional-dependencies]
lora = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",                # LoRA fine-tuning
    "datasets>=2.18",
    "trl>=0.8",                  # SFT/DPO trainers
    "accelerate>=0.28",
]
openai = [
    "openai>=1.30",
]
together = [
    "together>=1.2",
]
slack = [
    "slack-sdk>=3.27",           # Slack connector (V0.2)
]
docker = [
    "docker>=7.0",               # Docker sandbox connector (V0.2)
]
all = [
    "agent-foundry[lora,openai,together,slack,docker]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "ipykernel",                 # for example notebooks
]

[project.scripts]
evoforge = "foundry.cli:main"

[project.urls]
Homepage = "https://github.com/[org]/agent-foundry"
Documentation = "https://agent-foundry.readthedocs.io"
Repository = "https://github.com/[org]/agent-foundry"
Issues = "https://github.com/[org]/agent-foundry/issues"
Discord = "https://discord.gg/placeholder"
Paper = "https://arxiv.org/abs/2506.XXXXX"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=foundry --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src/foundry"]
omit = ["*/tests/*"]
